# conformal-eval

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: publish-package-test.yaml  publish-package.yaml
examples/: Nonconformist_and_conformal-eval.ipynb  User_guide_classification.ipynb  User_guide_regression.ipynb
src/conf_eval/cpsign/report/: _html.py  html.py
src/conf_eval/metrics/: _classification.py  _regression.py
src/conf_eval/plot/: _classification.py  _regression.py
src/conf_utils/cpsign/: _load.py
src/conf_utils/metrics/: __init__.py  _classification.py  _regression.py
src/conf_utils/plot/: __init__.py
src/conf_utils/plotting/: __init__.py  _classification.py  _common.py  _regression.py
tests/: context.py  help_utils.py
tests/conf_eval/: utils_test.py
tests/conf_eval/cpsign/: load_cpsign_test.py  test_cli.py
tests/conf_eval/cpsign/report/: generate_html_test.py  test_cli.py
tests/conf_eval/metrics/: clf_metrics_test.py  reg_metrics_test.py
tests/conf_eval/plot/: clf_plotting_test.py  reg_plotting_test.py
tests/conf_utils/: utils_test.py
tests/conf_utils/cpsign/: load_cpsign_test.py
tests/conf_utils/metrics/: clf_metrics_test.py  reg_metrics_test.py
tests/conf_utils/plot/: clf_plotting_test.py  reg_plotting_test.py
tests/conf_utils/plotting/: clf_plotting_test.py  reg_plotting_test.py
tests/generate_test_files/: generate_multilabel_predictions.py
tests/resources/: custom_model_text.html
