[project]
name = "conformal_utils"
version = "1.0.0b1"
authors = [
  { name="Staffan Arvidsson McShane", email="staffan.arvidsson@gmail.com" },
]
description = "A package with utility functions for assessing conformal predictors"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.19",
    "pandas>=2.0",
    "scikit-learn>=1.0.0"
]



[project.optional-dependencies]
seaborn = ["seaborn>=0.12"]



[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"



[project.urls]
Homepage = "https://github.com/pharmbio/plot_utils"
Repository = "https://github.com/pharmbio/plot_utils"